[gd_scene load_steps=8 format=2]

[ext_resource path="res://client/menu/lobby/server_browser.gd" type="Script" id=1]
[ext_resource path="res://client/theme/flappy.theme" type="Theme" id=2]
[ext_resource path="res://client/fonts/DelaGothicOne-32.tres" type="DynamicFont" id=3]
[ext_resource path="res://client/menu/lobby/server_entry.tscn" type="PackedScene" id=4]
[ext_resource path="res://client/menu/lobby/join_panel.tscn" type="PackedScene" id=5]
[ext_resource path="res://client/menu/menu_button.tscn" type="PackedScene" id=6]
[ext_resource path="res://client/ui/title_label.tscn" type="PackedScene" id=7]

[node name="ServerBrowser" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 1 )
server_entry = ExtResource( 4 )

[node name="ServerRequest" type="HTTPRequest" parent="."]
timeout = 5.0

[node name="RefreshTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Title" parent="." instance=ExtResource( 7 )]
margin_bottom = 111.0
text = "Server Browser"

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.05
anchor_top = 0.13
anchor_right = 0.95
anchor_bottom = 0.9
rect_min_size = Vector2( 1200, 750 )

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="InfoMessage" type="Label" parent="Panel/CenterContainer"]
visible = false
margin_left = 689.0
margin_top = 384.0
margin_right = 1020.0
margin_bottom = 432.0
custom_fonts/font = ExtResource( 3 )
text = "No servers found!"
align = 1
valign = 1

[node name="ErrorMessage" type="Label" parent="Panel/CenterContainer"]
visible = false
margin_left = 706.0
margin_top = 384.0
margin_right = 1003.0
margin_bottom = 432.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Error message!"
align = 1
valign = 1

[node name="ServerListContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.98

[node name="Control" type="Control" parent="Panel/ServerListContainer"]
margin_right = 1641.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )

[node name="ServerListHeader" type="HBoxContainer" parent="Panel/ServerListContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Panel/ServerListContainer/Control/ServerListHeader"]
margin_top = 16.0
margin_right = 800.0
margin_bottom = 64.0
rect_min_size = Vector2( 800, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Server Name"

[node name="Label2" type="Label" parent="Panel/ServerListContainer/Control/ServerListHeader"]
margin_left = 804.0
margin_top = 16.0
margin_right = 1104.0
margin_bottom = 64.0
rect_min_size = Vector2( 300, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Players"

[node name="RefreshButton" type="Button" parent="Panel/ServerListContainer/Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -25.5
margin_bottom = 25.5
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Refresh"

[node name="ServerListEntries" type="VBoxContainer" parent="Panel/ServerListContainer"]
margin_top = 84.0
margin_right = 1641.0
margin_bottom = 783.0
size_flags_vertical = 3

[node name="CenterContainer2" type="CenterContainer" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/CenterContainer2"]
margin_left = 350.0
margin_right = 1360.0
margin_bottom = 70.0
rect_min_size = Vector2( 700, 70 )
custom_constants/separation = 25
alignment = 1

[node name="CreateButton" type="Button" parent="Panel/CenterContainer2/ButtonContainer"]
margin_right = 320.0
margin_bottom = 70.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Create Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelfHostButton" type="Button" parent="Panel/CenterContainer2/ButtonContainer"]
margin_left = 345.0
margin_right = 665.0
margin_bottom = 70.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Self Host Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IpJoinButton" type="Button" parent="Panel/CenterContainer2/ButtonContainer"]
margin_left = 690.0
margin_right = 1010.0
margin_bottom = 70.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Join by IP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinPanel" parent="." instance=ExtResource( 5 )]

[node name="Footer" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BackButton" parent="Footer" instance=ExtResource( 6 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -75.0
margin_right = 177.0
margin_bottom = 5.0
label = "Back"
alignment = 1

[connection signal="request_completed" from="ServerRequest" to="." method="_on_ServerRequest_request_completed"]
[connection signal="timeout" from="RefreshTimer" to="." method="_on_RefreshTimer_timeout"]
[connection signal="pressed" from="Panel/ServerListContainer/Control/RefreshButton" to="." method="_on_RefreshButton_pressed"]
[connection signal="pressed" from="Panel/CenterContainer2/ButtonContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="Panel/CenterContainer2/ButtonContainer/SelfHostButton" to="." method="_on_SelfHostButton_pressed"]
[connection signal="pressed" from="Panel/CenterContainer2/ButtonContainer/IpJoinButton" to="." method="_on_IpJoinButton_pressed"]
[connection signal="pressed" from="Footer/BackButton" to="." method="_on_BackButton_pressed"]
